<resources>
    <string name="app_name">StoryThere</string>
    <string name="text_settings">Text Settings</string>
    <string name="apply">Apply</string>
    <string name="default_settings">Default</string>
    <string name="you_sure_delete">Are you sure you want to delete this file?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="font_size">Font Size</string>
    <string name="letter_spacing">Letter Spacing</string>
    <string name="line_height">Line Height</string>
    <string name="paragraph_spacing">Paragraph Spacing</string>
    <string name="text_alignment">Text Alignment</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="reading">Reading</string>
    <string name="favourite">Favourite</string>
    <string name="already_read">Already Read</string>
    <string name="choose_how_you_want_to_enjoy_this_book">Choose how you want to enjoy this book:</string>
    <string name="read">Read</string>
    <string name="listen">Listen</string>
    <string name="start_reading">Start Reading</string>
    <string name="start_listening">Start listening</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="remove_from_favourite">Remove from Favourite</string>
    <string name="choose_voice">Choose Voice</string>
    <string name="forward_10_seconds">Forward 10 seconds</string>
    <string name="play_pause">Play/Pause</string>
    <string name="rewind_10_seconds">Rewind 10 seconds</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Войти</string>
    <string name="forget_password">Forgot password?</string>
    <string name="registration">Registration</string>
    <string name="username">User Name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="gender_not_specified">Prefer not to say</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration_title">Registration</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_bold">Login</string>
    <string name="please_fill_all_fields_correctly">Please fill all fields correctly</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="registration_success">Congratulations, you have successfully registered</string>
    <string name="registration_failed">Sorry, registration failed</string>
    <string name="welcome_title">Welcome to StoryThere</string>
    <string name="welcome_message">StoryThere is your world of stories on your phone.</string>
    <string name="login_failed">Failed to log in</string>
    <string name="estimated_time">"Estimated time: "</string>
    <string name="estimated_time_uncalc">Estimated time: --</string>
    <string name="min">" min"</string>
    <string name="words">" words"</string>
    <string name="pages">" pages"</string>
    <string name="book_imported">"Book imported: "</string>
    <string name="permission_denied">Permission denied</string>
    <string name="storage_permission_denied">Storage permission denied</string>
    <string name="selected">" selected"</string>
    <string name="books_deleted">Books deleted</string>
    <string name="books_delete_failed">Could not delete books from server</string>
    <string name="books_delete_partial_failed">Some books could not be deleted from server</string>
    <string name="books_removed_from_favourites">Books removed from favourites</string>
    <string name="books_added_to_favourites">Books added to favourites</string>
    <string name="books_favourite_update_failed">Could not update favourites on server</string>
    <string name="books_favourite_update_partial_failed">Some favourites could not be updated on server</string>
    <string name="unknown_author">Unknown Author</string>
    <string name="author_name">Author Name</string>
    <string name="book_cover_long_press_to_change_cover_image">Book cover. Long press to change cover image.</string>
    <string name="images_disabled_for_large_pdf_files"><![CDATA[Images disabled for large PDF files (>20MB)]]></string>
    <string name="no_content_provided">No content provided</string>
    <string name="failed_to_load_pdf">Failed to load PDF</string>
    <string name="failed_to_load_text_content">Failed to load text content</string>
    <string name="failed_to_load_epub">Failed to load EPUB</string>
    <string name="reset_password_title">Enter your email</string>
    <string name="reset_password_message">We will send you an email with a link to change your password.</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_books">Книги</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="night">Night</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="interface_language">Interface Language</string>
    <string name="about_us">About Us</string>
    <string name="report_issue_faq">Report Issue &amp; FAQ</string>
    <string name="logout">Log Out</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="current_language">English</string>
    <string name="dark">Dark</string>
    <string name="book_cover">Book cover</string>
    <string name="find_your_awesome_book">Find your awesome book</string>
    <string name="we_recommend">We recommend</string>
    <string name="recommend_books">Recommended books</string>
    <string name="recommend_audiobooks">Recommended audiobooks</string>
    <string name="exclusives">Authors</string>
    <string name="authors">Authors</string>
    <string name="downloading">Downloading book...</string>
    <string name="download_failed">Download failed</string>
    <string name="no_file_selected">No file selected</string>
    <string name="error_initializing_reader">"Error initializing reader: "</string>
    <string name="error_opening_pdf">Error opening PDF</string>
    <string name="error_reading_epub_file">Error reading EPUB file</string>
    <string name="please_fill_in_all_required_fields">Please fill in all required fields</string>
    <string name="book_added_successfully">Book added successfully!</string>
    <string name="failed_to_add_book">"Failed to add book: "</string>
    <string name="add_book">Add Book</string>
    <string name="adding">Adding...</string>
    <string name="using">"Using "</string>
    <string name="tts">" TTS"</string>
    <string name="language_is_not_supported_on_this_device">" language is not supported on this device"</string>
    <string name="failed_to_initialize_text_to_speech">Failed to initialize text-to-speech</string>
    <string name="error_starting_text_to_speech">Error starting text-to-speech</string>
    <string name="text_to_speech_is_not_ready">Text-to-speech is not ready</string>
    <string name="preparing_audio">"Preparing audio: "</string>
    <string name="ready_to_play">Ready to play</string>
    <string name="download_failed_file_not_found">Download failed: file not found</string>
    <string name="download_timeout">Download timeout</string>
    <string name="processing_in_progress">Processing in progress...</string>
    <string name="loading_content">Loading content...</string>
    <string name="user">User</string>
    <string name="no_email_available">No email available</string>
    <string name="signed_in">"Signed in: "</string>
    <string name="br_br_please_try_again_or_contact_support_body_html"><![CDATA[<br><br>Please try again or contact support.</body></html>]]></string>
    <string name="p_this_file_type_is_not_currently_supported_p"><![CDATA[<p>This file type is not currently supported.</p>]]></string>
    <string name="p_we_re_working_on_adding_native_support_for_epub_and_fb2_files_p"><![CDATA[<p>We\'re working on adding native support for EPUB and FB2 files.</p>]]></string>
    <string name="password_reset_email_sent_successfully_please_check_your_email">Password reset email sent successfully!\nPlease check your email.</string>
    <string name="failed_to_send_reset_email">Failed to send reset email</string>
    <string name="failed_to_load_cached_text">Failed to load cached text</string>
    <string name="add_new_book">Add New Book</string>
    <string name="title">Title *</string>
    <string name="enter_book_title">Enter book title</string>
    <string name="author">Author *</string>
    <string name="enter_author_name">Enter author name</string>
    <string name="annotation">Annotation</string>
    <string name="enter_book_description_annotation">Enter book description/annotation</string>
    <string name="file_url">File URL *</string>
    <string name="enter_file_url_e_g_https_example_com_book_epub">Enter file URL (e.g., https://example.com/book.epub)</string>
    <string name="image_url">Image URL</string>
    <string name="enter_cover_image_url_optional">Enter cover image URL (optional)</string>
    <string name="file_type">File Type *</string>
    <string name="enter_file_type_e_g_epub_pdf">Enter file type (e.g., epub, pdf)</string>
    <string name="add_new_book_admin">Add New Book (Admin)</string>
    <string name="catalog_item_type">Catalog item type</string>
    <string name="add_as_audiobook">Add as audiobook</string>
    <string name="recommendation_item_id">Recommendation item ID</string>
    <string name="enter_recommendation_item_id">Required for audiobooks, optional for books</string>
    <string name="recommendation_item_id_required">Recommendation item ID is required for audiobooks</string>
    <string name="publication_year">Publication year</string>
    <string name="enter_publication_year">Enter publication year</string>
    <string name="genres">Genres</string>
    <string name="enter_genres_comma_separated">Enter genres separated by commas</string>
    <string name="license">License</string>
    <string name="license_format">License: %1$s</string>
    <string name="enter_license">Enter license</string>
    <string name="audio_url">Audio URL *</string>
    <string name="enter_audio_url">Enter audio URL</string>
    <string name="audio_type">Audio type *</string>
    <string name="enter_audio_type">Enter audio type (e.g., mp3)</string>
    <string name="dictor">Narrator</string>
    <string name="enter_dictor">Enter narrator name</string>
    <string name="duration_seconds">Duration, seconds</string>
    <string name="enter_duration_seconds">Enter duration in seconds</string>
    <string name="source_text_url">Source text URL</string>
    <string name="enter_source_text_url">Enter source text URL</string>
    <string name="source_url">Source URL</string>
    <string name="enter_source_url">Enter source URL</string>
    <string name="failed_to_add_author">"Failed to add author: "</string>
    <string name="search_page_content_will_be_here">Search page content will be here</string>
    <string name="book_title">Book Title</string>
    <string name="summarize">Summarize</string>
    <string name="summarizing_text">Summarizing text...</string>
    <string name="summary_generated">Summary generated successfully</string>
    <string name="failed_to_generate_summary">Failed to generate summary</string>
    <string name="text_too_long_for_summary">Text is too long for summarization. Please try with a shorter text.</string>
    <string name="book_summary">Book Summary</string>
    <string name="show_text">Show Text</string>
</resources>