<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_200"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/footerButton">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_how_you_want_to_enjoy_this_book"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"/>

        <RadioGroup
            android:id="@+id/readingModeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/readButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read"
                android:textSize="16sp"
                android:padding="16dp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/audioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listen"
                android:textSize="16sp"
                android:padding="16dp"/>

        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/footerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_reading"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout> 